# beethoven

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/swap/: mod.rs  omnipair.rs
crates/client/tests/: omnipair.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/swap/aldrin-v2/src/: lib.rs
crates/swap/aldrin/src/: lib.rs
crates/swap/futarchy/src/: lib.rs
crates/swap/gamma/src/: lib.rs
crates/swap/goonfi/: Cargo.toml
crates/swap/goonfi-v2/: Cargo.toml
crates/swap/goonfi-v2/src/: lib.rs
crates/swap/goonfi/src/: lib.rs
crates/swap/hadron/src/: lib.rs
crates/swap/heaven/src/: lib.rs
crates/swap/manifest/src/: lib.rs
crates/swap/omnipair/: Cargo.toml
crates/swap/omnipair/src/: lib.rs
crates/swap/perena/src/: lib.rs
fixtures/swap/gamma/: amm_config.json  observation_key.json  pool_state.json  vault_0.json  vault_1.json
fixtures/swap/omnipair/: futarchy_authority.json  rate_model.json  sol_usdc_pair.json  sol_usdc_pair_sol_reserve_vault.json  sol_usdc_pair_usdc_reserve_vault.json
program-test/: Cargo.toml
program-test/.cargo/: config.toml
program-test/src/: lib.rs  multi_swap.rs  route.rs  swap.rs
src/: context.rs  lib.rs  traits.rs
src/programs/: mod.rs
src/programs/jupiter/: mod.rs
src/programs/kamino/: mod.rs
src/traits/: deposit.rs
tests/: helper.rs  integration.rs
tests/swap/: gamma.rs  hadron.rs  manifest.rs  mod.rs  multi_swap.rs  omnipair.rs  raydium_cpmm.rs  route.rs  scale_amm.rs  scale_vmm.rs  tagged.rs
(+4 files in other folders)
