[package]
name = "beethoven"
description = "A Trait-based client that let you compose program extremely easily"
version = "0.0.1"
license = "MIT"
edition = "2024"

[features]
default = ["jupiter", "kamino"]
jupiter = []
kamino = []

[dependencies]
pinocchio = { version = "0.10.0", features = ["cpi"] }
