[package]
name = "beethoven-test"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
upstream-bpf = ["dep:solana-define-syscall"]

[dependencies]
beethoven = { path = "..", features = ["deposit", "swap"] }
pinocchio = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
pinocchio-token = "0.5.0"
pinocchio-token-2022 = "0.2.0"
solana-define-syscall = { version = "4.0.1", features = [
    "unstable-static-syscalls",
], optional = true }
